@@ -1,22 +1,21 @@
 package com.iskaypet.clients;
 
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.Mockito.when;
+
 import com.iskaypet.clients.responses.UserResponse;
-import com.iskaypet.core.RestClient;
 import com.iskaypet.core.Response;
+import com.iskaypet.core.RestClient;
 import io.reactivex.rxjava3.core.Observable;
+import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
-import java.util.Arrays;
-import java.util.List;
-
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.Mockito.when;
-
 class UserClientTest {
+
     @Mock
     RestClient restClient;
 
@@ -40,16 +39,18 @@ class UserClientTest {
         usersArr[1].name = "Bob";
         usersArr[1].email = "bob@example.com";
         Response<UserResponse[]> response = new Response<>(200, usersArr);
-        when(restClient.getObservable(org.mockito.ArgumentMatchers.anyString(), org.mockito.ArgumentMatchers.<Class<UserResponse[]>>any())).thenReturn(Observable.just(response));
+        when(restClient.getObservable(org.mockito.ArgumentMatchers.anyString(),
+            org.mockito.ArgumentMatchers.<Class<UserResponse[]>>any())).thenReturn(
+            Observable.just(response));
 
         List<UserResponse> result = userClient.getUsers().blockingFirst();
 
         assertThat(result).hasSize(2);
-        assertThat(result.get(0).id).isEqualTo(1L);
+        assertThat(result.getFirst().id).isEqualTo(1L);
         assertThat(result.get(0).name).isEqualTo("Alice");
         assertThat(result.get(0).email).isEqualTo("alice@example.com");
         assertThat(result.get(1).id).isEqualTo(2L);
         assertThat(result.get(1).name).isEqualTo("Bob");
         assertThat(result.get(1).email).isEqualTo("bob@example.com");
     }
-} 
+}
