@@ -1,22 +1,22 @@
 package com.iskaypet.controllers;
 
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.Mockito.when;
+
 import com.iskaypet.dto.UserDTO;
 import com.iskaypet.services.UserService;
 import io.javalin.http.Context;
 import io.reactivex.rxjava3.core.Observable;
+import java.util.Arrays;
+import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
-import java.util.Arrays;
-import java.util.List;
-
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.Mockito.when;
-
 class UserControllerTest {
+
     @Mock
     UserService userService;
     @Mock
@@ -45,7 +45,7 @@ class UserControllerTest {
         List<UserDTO> result = userController.getUsers(context).blockingFirst();
 
         assertThat(result).hasSize(2);
-        assertThat(result.get(0).userId).isEqualTo(1L);
+        assertThat(result.getFirst().userId).isEqualTo(1L);
         assertThat(result.get(0).name).isEqualTo("Alice");
         assertThat(result.get(0).email).isEqualTo("alice@example.com");
         assertThat(result.get(1).userId).isEqualTo(2L);
